syntax = "proto3";

package user;

service UserService {
    rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse);
    rpc AuthenticateUser (AuthenticateUserRequest) returns (User);
    rpc GetUser (GetUserRequest) returns (User);
    rpc GetUsersById (GetUsersByIdRequest) returns (GetUsersByIdResponse);
}

message User {
    string id = 1;
    string name = 2;    
}

message RegisterUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message RegisterUserResponse {
    bool registered = 1;
}

message AuthenticateUserRequest {
    string email = 1;
    string password = 2;
}

message GetUserRequest {
    string id = 1;
}

message GetUsersByIdRequest {
    repeated string ids = 1 [packed=true];
}

message GetUsersByIdResponse {
    repeated User users = 1;
}
